fix whitespace issues on ipad

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -54,6 +54,9 @@ p
 img
   max-width: 100%
 
+.nowrap
+  white-space: nowrap
+
 .container
   @include clearfix
   margin: 0 auto
@@ -86,6 +89,7 @@ article
     border: 1px solid $green
     background-color: #cec
     padding: 0 4px
+    margin: 2px 0
     border-radius: 4px
 
 .site-footer
